kubernetes/apps/network/k8s-gateway/app/gatewaynetworkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: k8s-gateway-allow
  annotations:
    future-me-why: "allow ingress from cluster for all endpoints, which also puts them in deny-by-default mode for ingress"
spec:
  endpointSelector:
  ingress:
    - fromEntities:
        - world
  egress:
    - toServices:
        k8s-gateway:
          serviceName: k8s-gateway
          namespace: network
