kubernetes/apps/network/k8s-gateway/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json#/properties/spec/properties/egress/items/properties/toServices/type
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "k8s-gateway-allow-ingress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-nginx-internal
  ingress:
  - fromEntities:
    - "world"
